# tascend-asset-importer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  shell.nix
include/tascend/: actor_extractor.hh  blender_bridge.hh  export_driver.hh  gltf_writer.hh  map_assembler.hh  material_resolver.hh  package_scanner.hh  pipeline.hh  psk_reader.hh  terrain_reader.hh
scripts/: assemble_map.py  convert_actors.py  convert_skeletal.py  extract_terrain.py  match_psa.py
slicer/: AssetExtractor.cs  Decompiler.csproj  MapExtractor.cs  Program.cs  TerrainDumper.cs  TerrainExtractor.cs  UE3NativesTable.cs
src/: actor_extractor.cpp  blender_bridge.cpp  export_driver.cpp  gltf_writer.cpp  main.cpp  map_assembler.cpp  material_resolver.cpp  package_scanner.cpp  pipeline.cpp  psk_reader.cpp  terrain_reader.cpp
